# sarray

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
sarray/: __main__.py  cancel.py  listen.py  main.py  sbatch_parser.py  slurm_job.py  submit.py  template.jinja  throttle.py
tests/: test_parse_lines.py  test_sbatch_parser.py  test_slurm_job.py  test_throttle.py
