[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sarray" 
version = "0.1.0"
description = "Meta scheduler merging Slurm Arrays" 
readme = "README.md"
requires-python = ">=3.13"
license = {text = "Apache-2.0"}
authors = [
  {name = "Nathan Cassereau", email = "nathan.cassereau@polytechnique.edu"},
]
dependencies = [
    "jinja2>=3.1.6",
    "rich>=14.3.3",
    "simple-parsing>=0.1.8",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.setuptools.package-data]
sarray = ["*.jinja"]

[project.scripts]
sarray = "sarray.main:main"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

