[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sarray" 
version = "0.3.1"
description = "Meta scheduler merging Slurm Arrays" 
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
  {name = "Nathan Cassereau", email = "nathan.cassereau@polytechnique.edu"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: System :: Distributed Computing",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    "jinja2>=3.1.6",
    "rich>=14.3.3",
    "simple-parsing>=0.1.8",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[project.urls]
"Source" = "https://github.com/ncassereau/sarray"

[tool.setuptools.package-data]
sarray = ["*.jinja"]

[project.scripts]
sarray = "sarray.main:main"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

